<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="32dp"
        android:text="@string/date_textView"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSwitchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_button_text"
        android:textSize="20sp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Switch
        android:id="@+id/switchDN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        app:layout_constraintVertical_bias="0.3"
        android:checked="true"
        android:showText="true"
        android:textOff="@string/night_switch_button_text"
        android:textOn="@string/day_switch_button_text"
        android:textSize="18sp"
        android:theme="@style/SwitchTheme"
        android:thumb="@drawable/switch_thumb"
        app:layout_constraintLeft_toRightOf="@+id/textViewSwitchButton"
        app:layout_constraintTop_toTopOf="@+id/textViewSwitchButton"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSwitchButton"/>

    <TextView
        android:id="@+id/textViewSpinnerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spinner_button_text"
        android:textSize="20sp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewSwitchButton"
        app:layout_constraintLeft_toLeftOf="parent"/>
    
    <Spinner
        android:id="@+id/spinnerButtonTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        app:layout_constraintVertical_bias="0.7"
        app:layout_constraintLeft_toRightOf="@id/textViewSpinnerButton"
        app:layout_constraintTop_toTopOf="@id/textViewSpinnerButton"
        app:layout_constraintBottom_toBottomOf="@id/textViewSpinnerButton"/>

    <TextView
        android:id="@+id/textViewRadioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three_button_text"
        android:textSize="20sp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewSpinnerButton"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/textViewRadioButtons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RadioButton
            android:id="@+id/radioButtonBad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bad"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButtonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ok" />

        <RadioButton
            android:id="@+id/radioButtonGood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Good" />

    </RadioGroup>

    <Button
        android:id="@+id/saveInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveTextButton"
        style="@style/button_style"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>